apps/petclinic/base/petclinic-rollout.yaml
apiVersion: argoproj.io/v1alpha1
kind: Rollout
metadata:
  labels:
    signer: ocplab
  name: petclinic
spec:
  progressDeadlineSeconds: 600
  replicas: 3
  revisionHistoryLimit: 10
  selector:
    matchLabels:
      app: petclinic
  strategy:
    canary:
      dynamicStableScale: true
      canaryService: petclinic-canary
      stableService: petclinic-stable
      trafficRouting:
        plugins:
          argoproj-labs/openshift:
            routes:
              - petclinic
      steps:
        - setWeight: 20
        - analysis:
            templates:
              - templateName: smoke-test
            args:
              - name: namespace
                valueFrom:
                  fieldRef:
                    fieldPath: metadata.namespace
              - name: route-name
                value: petclinic-canary
              - name: route-url
                value: https://petclinic-canary-petclinic-dev.apps.home.ocplab.com/
        - setWeight: 100
  template:
    metadata:
      annotations:
        openshift.io/generated-by: OpenShiftWebConsole
      labels:
        app: petclinic
        signer: ocplab
    spec:
      containers:
        - image: quay.io/gnunn/quarkus-petclinic:latest
          imagePullPolicy: Always
          livenessProbe:
            httpGet:
              path: /q/health/live
              port: 8080
          readinessProbe:
            httpGet:
              path: /q/health/ready
              port: 8080
          startupProbe:
            httpGet:
              path: /q/health/started
              port: 8080
          name: petclinic
          ports:
            - containerPort: 8080
              protocol: TCP
            - containerPort: 8443
              protocol: TCP
          resources:
            requests:
              cpu: 100m
              memory: 256Mi
            limits:
              cpu: 500m
              memory: 512Mi
          terminationMessagePath: /dev/termination-log
          terminationMessagePolicy: File
      dnsPolicy: ClusterFirst
      restartPolicy: Always
      schedulerName: default-scheduler
      terminationGracePeriodSeconds: 30
