apps/petclinic/base/petclinic-route.yaml
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: petclinic
  annotations:
    haproxy.router.openshift.io/disable_cookies: 'true'
    haproxy.router.openshift.io/balance: roundrobin
spec:
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: petclinic-stable
    weight: 100
  alternateBackends:
    - kind: Service
      name: petclinic-canary
      weight: 0
---
apiVersion: route.openshift.io/v1
kind: Route
metadata:
  name: petclinic-canary
spec:
  port:
    targetPort: 8080-tcp
  tls:
    insecureEdgeTerminationPolicy: Redirect
    termination: edge
  to:
    kind: Service
    name: petclinic-canary
